# ppac-syp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
ppac_syp/: functions.py
references/: notes.txt
