[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ppac_syp"
version = "0.0.1"
description = "Using embeddings to find poorly conserved orthologs of synaptonemal complex proteins in Pristionchus"
authors = [
  { name = "Peter Carlton" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ppac_syp"]
include = ["pyproject.toml", "ppac_syp/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ppac_syp"]
force-sort-within-sections = true

